spec-062: mirror sync, registry, separators, tests (#203)
Fix 46 missing handler files in `.agents/` Codex/Gemini mirrors
(write: 4, review: 8, debug: 8, create: 3, solution-intent: 3 per
location). Sync skill count to 32 across all instruction files. Add
`ai-instinct` to Meta group and Effort table (max: 8 -> 9).

Update sync_command_mirrors.py to insert `---` between handler
sections in concatenated .prompt.md files. Copy deployment-patterns.md
governance context to template mirror.

Add test_handler_routing_completeness (90 tests) and
test_template_prompt_parity (35 tests) as regression guards.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>

Ai-Eng-Gate: passed